// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary for multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totalling 
      <span>
        $12,500.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="box-button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseSummary page for 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $125.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="box-button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
